# egglog-encoding

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  analysis.py  backend-interface-for-efficient-egraphs-and-proofs.md  bench.py  bench_web.py  cli.py  models.py  pyproject.toml  report.py  report_frame.py  samply_analysis.py  tables.py  test_backend.py  test_bench.py  test_bench_web.py  test_web.py  web.py  web_registry.py
egglog/: CHANGELOG.md  Cargo.toml
egglog-experimental/: Cargo.toml  README.md
egglog-experimental/.github/workflows/: build.yml
egglog-experimental/benches/: files.rs
egglog-experimental/dd/: .gitignore  Cargo.toml
egglog-experimental/dd/docs/: flowlog-direction.md  rebuild-in-dataflow.md
egglog-experimental/dd/src/: compile.rs  dd_native.rs  engine.rs  interpret.rs  lib.rs  merge_hub.rs  monotone.rs  rule_builder.rs  schedule_compiler.rs
egglog-experimental/dd/tests/: files.rs  monotone_fire.rs  rebuild_fixpoint.rs  rewrite_join.rs  schedule_regions.rs  scope_consolidation.rs  smoke.rs
egglog-experimental/examples/: causal_slice_proof.rs
egglog-experimental/flowlog/: Cargo.toml
egglog-experimental/flowlog/src/: compile.rs  dd_native.rs  external_func.rs  interpret.rs  lib.rs  rule_builder.rs
egglog-experimental/flowlog/tests/: files.rs  rewrite_join.rs  smoke.rs
egglog-experimental/src/: container_primitives.rs  either.rs  fresh_macro.rs  keep_best.rs  lib.rs  main.rs  maybe.rs  multi_extract.rs  primitive.rs  set_cost.rs  table_rows.rs  table_stats.rs
egglog-experimental/src/sugar/: for.rs
egglog-experimental/tests/: causal_slice.rs  eggcc_2mm_proof.rs  files.rs  timing_summary_cli.rs
egglog-experimental/tests/fail-typecheck/: primitive-direct-function-body-in-rule.egg  primitive-global-body-in-seminaive-rule.egg  primitive-malformed-input-sorts.egg  primitive-output-context-eqsort-mismatch.egg  primitive-unresolved-body-symbol.egg
egglog-experimental/tests/fixtures/: eggcc-2mm-pass1-merge-old.egg  eggcc-2mm-pass1.egg
egglog-experimental/tests/proofs/: unstable-fresh-proof.egg
egglog-experimental/tests/snapshots/: files__proofs__eggcc_2mm_pass1_merge_old_proof_testing.snap  files__proofs__for_proof_testing.snap  files__proofs__test_fresh_proof_testing.snap  files__proofs__test_working_fresh_proof_testing.snap  files__proofs__unstable_fresh_proof_proof_testing.snap  files__proofs__with_ruleset_proof_testing.snap
egglog/benches/: common.rs
egglog/core-relations/src/: common.rs  dependency_graph.rs  lib.rs  query.rs  receipts.rs  table_spec.rs  tests.rs
egglog/docs/: disjunction-design.md
egglog/egglog-ast/src/: core.rs  generic_ast.rs  generic_ast_helpers.rs  lib.rs
egglog/egglog-backend-trait/: Cargo.toml
egglog/egglog-backend-trait/src/: backend_impl.rs  lib.rs
egglog/egglog-bridge/examples/: ac.rs  math.rs
egglog/egglog-bridge/src/: lib.rs  rule.rs  tests.rs
egglog/egglog-reports/: Cargo.toml
egglog/egglog-reports/src/: lib.rs
egglog/examples/: causal_slice.rs
egglog/numeric-id/src/: lib.rs  tests.rs
egglog/profile-viz/: index.html
egglog/scripts/: nightly_bench.py  requirements.txt
egglog/src/: causal_slice.rs  cli.rs  constraint.rs  core.rs  exec_state.rs  extract.rs  lib.rs  prelude.rs  scheduler.rs  serialize.rs  termdag.rs  typechecking.rs  util.rs
egglog/src/api/: mod.rs
egglog/src/ast/: check_shadowing.rs  desugar.rs  mod.rs  parse.rs  proof_global_remover.rs  remove_globals.rs
egglog/src/proofs/: merge_as_actions_design.md  mod.rs  proof_checker.rs  proof_container_rebuild.rs  proof_encoding.md  proof_encoding.rs  proof_encoding_facts.rs  proof_encoding_helpers.rs  proof_encoding_rebuild.rs  proof_extraction.rs  proof_extractor.rs  proof_format.rs  proof_fresh.rs  proof_normal_form.rs  proof_simplification.rs  proof_tests.rs
egglog/src/sort/: bigint.rs  bigrat.rs  fn.rs  map.rs  mod.rs  multiset.rs  pair.rs  set.rs  string.rs  vec.rs
egglog/tests/: causal_receipts_cli.rs  causal_slice.rs  container-reorder-proofs.egg  container_rebuild.rs  custom-container-output-rebuild.egg  disjunction.rs  eggcc-2mm.egg  files.rs  hardboiled_conv1d_32.egg  integration_test.rs  luminal-llama.egg  math-microbenchmark-mini.egg  math-microbenchmark.egg  merge-action-block.egg  merge_action_block.rs  proof_mode_regression.rs  run-rule.egg  run_rule.rs  timing_summary_cli.rs  tuple-output.egg  tuple_outputs.rs  typed_primitive.rs  union-operand-reuse.egg
egglog/tests/proofs/: bare-container-side-condition.egg  bigrat-primitive-result.egg  cse-repeated-build.egg  i64-primitive-result.egg  reuse-body-term.egg  rule-head-fast-path.egg  run-rule-selected.egg
egglog/tests/snapshots/: files__proof_integration__eqsolve_desugar_proof_testing.snap  files__proof_integration__integer_math_desugar_proof_testing.snap  files__proof_integration__math_proof_testing.snap  files__proof_manual_disabled_files.snap  files__proof_unsupported_files.snap  files__proofs__antiunify_proof_testing.snap  files__proofs__array_proof_testing.snap  files__proofs__bare_container_side_condition_proof_testing.snap  files__proofs__bdd_proof_testing.snap  files__proofs__bind_prim_result_proof_testing.snap  files__proofs__birewrite_proof_testing.snap  files__proofs__bitwise_proof_testing.snap  files__proofs__bool_proof_testing.snap  files__proofs__calc_proof_testing.snap  files__proofs__combinators_proof_testing.snap  files__proofs__combined_nested_proof_testing.snap  files__proofs__commute_collapse_proof_testing.snap  files__proofs__complex_merge_func_proof_testing.snap  files__proofs__container_fail_proof_testing.snap  files__proofs__container_proofs_proof_testing.snap  files__proofs__container_reorder_proofs_proof_testing.snap  files__proofs__container_set_collapse_proof_testing.snap  files__proofs__cse_repeated_build_proof_testing.snap  files__proofs__custom_container_output_rebuild_proof_testing.snap  files__proofs__cyk_proof_testing.snap  files__proofs__delete_proof_testing.snap  files__proofs__eqsat_basic_proof_proof_testing.snap  files__proofs__f64_proof_testing.snap  (+69 more)
egglog/union-find/src/: lib.rs
(+136 files in other folders)
