[workspace]
resolver = "3"
members = [
  "egglog",
  "egglog/concurrency",
  "egglog/core-relations",
  "egglog/egglog-ast",
  "egglog/egglog-backend-trait",
  "egglog/egglog-bridge",
  "egglog/egglog-reports",
  "egglog/numeric-id",
  "egglog/union-find",
  "egglog/src/sort/add_primitive",
  "egglog/wasm-example",
  "egglog-experimental",
  "egglog-experimental/dd",
]

[workspace.package]
version = "2.0.0"
edition = "2024"
description = "egglog is a language that combines the benefits of equality saturation and datalog. It can be used for analysis, optimization, and synthesis of programs. It is the successor to the popular rust library egg."
repository = "https://github.com/egraphs-good/egglog"
keywords = ["e-graphs", "egglog", "datalog", "compiler", "equality"]
license = "MIT"
readme = "egglog/README.md"

[workspace.dependencies]
clap = "4"
egraph-serialize = { version = "0.3.0", default-features = false }
env_logger = "0.11"
hashbrown = "0.16"
im-rc = "15.1.0"
indexmap = "2.2"
log = "0.4"
num = "0.4.3"
ordered-float = "5.0"
rustc-hash = "2.1"
thiserror = "2.0"
web-time = "1.1"
dyn-clone = "1.0.17"
enum-map = "2.7"
rayon = "1.10.0"
mimalloc = "0.1"
quote = "1.0"
syn = "2.0"
arc-swap = "1.7.1"
fixedbitset = "0.5"
smallvec = "1.10"
bumpalo = "3.12"
anyhow = "1.0"
crossbeam-queue = "0.3.11"
crossbeam = "0.8.4"
dashmap = "6.1.0"
rand = "0.9"
getrandom = "0.3"
once_cell = "1.21"
num-rational = "0.4"
csv = "1.3"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"

######################
# build dependencies
######################
chrono = { version = "0.4", default-features = false }

######################
# dev dependencies
######################
glob = "0.3.1"
divan = { package = "codspeed-divan-compat", version = "4.6.0" }
libtest-mimic = "0.8"

######################
# member crates
######################
egglog-core-relations = { path = "egglog/core-relations", version = "2.0.0" }
egglog-ast = { path = "egglog/egglog-ast", version = "2.0.0" }
egglog-bridge = { path = "egglog/egglog-bridge", version = "2.0.0" }
egglog-concurrency = { path = "egglog/concurrency", version = "2.0.0" }
egglog-numeric-id = { path = "egglog/numeric-id", version = "2.0.0" }
egglog-union-find = { path = "egglog/union-find", version = "2.0.0" }
egglog-add-primitive = { path = "egglog/src/sort/add_primitive", version = "2.0.0" }
egglog-reports = { path = "egglog/egglog-reports", version = "2.0.0" }
egglog-backend-trait = { path = "egglog/egglog-backend-trait", version = "2.0.0" }
egglog = { path = "egglog", default-features = false, version = "2.0.0" }

######################
# wasm
######################
wasm-bindgen = "0.2"

[profile.dev]
opt-level = 3
debug = "line-tables-only"


# https://github.com/mstange/samply/?tab=readme-ov-file#turn-on-debug-info-for-full-stacks
[profile.profiling]
inherits = "release"
debug = true
