[project]
name = "egglog-encoding"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0",
    "pandas>=2.2",
    "pandera[pandas,mypy]>=0.26",
    "rich>=13.7",
    "scipy>=1.14",
]

[dependency-groups]
dev = [
    "mypy>=1.17",
    "pandas-stubs>=2.2",
    "pytest>=8.0",
    "ruff>=0.12",
]

[tool.mypy]
python_version = "3.12"
plugins = ["pandera.mypy"]
check_untyped_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true
pretty = true

[[tool.mypy.overrides]]
module = ["scipy.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["test_bench.py"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
