[package]
name = "egglog-experimental"
version = "0.1.0"
edition = "2024"
description = "Experimental extensions to the egglog language."
repository = "https://github.com/egraphs-good/egglog-experimental"
keywords = ["e-graphs", "egglog", "datalog", "compiler", "equality"]
license = "MIT"
readme = "README.md"

[[test]]
harness = false
name = "files"

[features]
default = ["bin"]
bin = ["egglog/bin"]

[dependencies]
egglog = { git = "https://github.com/egraphs-good/egglog.git", rev = "5294cdc66a7b90a9a1480cb2d930f2ee5785c8dd", default-features = false }
egglog-ast = { git = "https://github.com/egraphs-good/egglog.git", rev = "5294cdc66a7b90a9a1480cb2d930f2ee5785c8dd", default-features = false }
egglog-reports = { git = "https://github.com/egraphs-good/egglog.git", rev = "5294cdc66a7b90a9a1480cb2d930f2ee5785c8dd", default-features = false }

num = "0.4.3"
lazy_static = "1.4"
log = "0.4"

[dev-dependencies]
glob = "0.3.1"
libtest-mimic = "0.8.1"
