[package]
name = "egglog-experimental"
version = "0.1.0"
edition = "2024"
description = "Experimental extensions to the egglog language."
repository = "https://github.com/egraphs-good/egglog-experimental"
keywords = ["e-graphs", "egglog", "datalog", "compiler", "equality"]
license = "MIT"
readme = "README.md"

[[test]]
harness = false
name = "files"

[[bench]]
harness = false
name = "files"

[features]
default = ["bin"]
bin = ["egglog/bin"]
dd-backend = ["dep:egglog-experimental-dd"]

[dependencies]
egglog = { workspace = true }
egglog-ast = { workspace = true }
egglog-reports = { workspace = true }
egglog-experimental-dd = { path = "dd", optional = true }

num = "0.4.3"
lazy_static = "1.4"
log = "0.4"

[dev-dependencies]
divan = { workspace = true }
glob = "0.3.1"
insta = "1.40"
libtest-mimic = "0.8.1"
serde_json = { workspace = true }
