[package]
name = "egglog"
version = { workspace = true }
edition = { workspace = true }
description = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
readme = { workspace = true }

[[bench]]
name = "ci_benchmarking"
harness = false

[[bench]]
name = "rust_api_benchmarking"
harness = false

[[bench]]
name = "nightly_benchmarking"
harness = false

[[test]]
name = "files"
harness = false
required-features = ["bin"]

[[bin]]
name = "egglog"
path = "src/main.rs"
required-features = ["bin"]

[features]
default = ["bin"]

bin = [
  "serde",
  "graphviz",
  "dep:clap",
  "dep:env_logger",
  "dep:chrono",
  "dep:mimalloc",
]
serde = ["egraph-serialize/serde"]
graphviz = ["egraph-serialize/graphviz"]

[dependencies]
clap = { workspace = true, features = ["derive"], optional = true }
egraph-serialize = { workspace = true}
env_logger = { workspace = true, optional = true }
hashbrown = { workspace = true }
im-rc = { workspace = true }
indexmap = { workspace = true }
log = { workspace = true }
num = { workspace = true }
ordered-float = { workspace = true }
rustc-hash = { workspace = true }
thiserror = { workspace = true }
web-time = { workspace = true }
dyn-clone = { workspace = true }
enum-map = { workspace = true }
mimalloc = { workspace = true, optional = true }
csv = { workspace = true }
egglog-core-relations = { workspace = true }
egglog-ast = { workspace = true }
egglog-bridge = { workspace = true }
egglog-numeric-id = { workspace = true }
egglog-add-primitive = { workspace = true }
egglog-reports = { workspace = true }
rayon = { workspace = true }
serde_json = { workspace = true }

[build-dependencies]
chrono = { workspace = true, features = ["now"], optional = true }

[dev-dependencies]
divan = { workspace = true }
glob = { workspace = true }
libtest-mimic = { workspace = true }
testing_logger = "0.1"
insta = "1.40"
serial_test = "3"
