# An experimental differential-dataflow backend for egglog. It depends only on
# the public backend SPI plus the neutral shared rule AST and core relations,
# so it can serve as an out-of-tree backend example.
[package]
name = "egglog-experimental-dd"
version = "0.1.0"
edition = "2021"
description = "An experimental differential-dataflow-backed egglog Backend, as an out-of-tree example of the egglog-backend-trait SPI."
license = "MIT"
publish = false

[dependencies]
anyhow = "1"
egglog-backend-trait = { path = "../../egglog/egglog-backend-trait" }
egglog-ast = { path = "../../egglog/egglog-ast" }
egglog-core-relations = { path = "../../egglog/core-relations" }
egglog-numeric-id = { path = "../../egglog/numeric-id" }
hashbrown = "0.16"
log = "0.4"
# Raw differential-dataflow + timely, used in-process by `dd_native.rs`.
differential-dataflow = "=0.24.0"
timely = "=0.30.0"
serde = "1"
pprof = { version = "0.15.0", features = ["flamegraph"], optional = true }

[[test]]
# Parity harness over egglog's .egg corpus: checks the DD backend against
# egglog's OWN shared snapshots (`egglog/tests/snapshots/files__shared_snapshot_
# *.snap`), so egglog is the single source of truth. Custom libtest-mimic main.
name = "files"
harness = false

[dev-dependencies]
# The frontend, so the integration tests can run real `.egg` files on the
# Differential Dataflow backend via `egglog::EGraph::with_backend(..)`.
egglog = { path = "../../egglog", default-features = false }
egglog-experimental = { path = "..", default-features = false }
insta = "1.40"
libtest-mimic = "0.8"

[features]
pprof = ["dep:pprof"]
