# An experimental differential-dataflow backend for egglog. It depends only on
# the public `egglog-backend-trait` SPI plus the neutral
# `egglog-core-relations`, so it can serve as an out-of-tree backend example.
#
# It stays on edition 2021 (its differential-dataflow / timely dependency tree is
# edition 2021); the workspace `resolver = "3"` supports the mixed edition.
[package]
name = "egglog-experimental-flowlog"
version = "0.1.0"
edition = "2021"
description = "An experimental differential-dataflow-backed egglog Backend, as an out-of-tree example of the egglog-backend-trait SPI."
license = "MIT"
publish = false

[dependencies]
anyhow = "1"
egglog-backend-trait = { path = "../../egglog/egglog-backend-trait" }
egglog-core-relations = { path = "../../egglog/core-relations" }
egglog-numeric-id = { path = "../../egglog/numeric-id" }
hashbrown = "0.16"
log = "0.4"
# Raw differential-dataflow + timely, used in-process by `dd_native.rs`.
differential-dataflow = "=0.24.0"
timely = "=0.30.0"
serde = { version = "1", features = ["derive", "rc"] }

[[test]]
# Parity harness over egglog's .egg corpus: checks FlowLog's output against
# egglog's OWN shared snapshots (`egglog/tests/snapshots/files__shared_snapshot_
# *.snap`), so egglog is the single source of truth. Custom libtest-mimic main.
name = "files"
harness = false

[dev-dependencies]
# The frontend, so the integration tests can run real `.egg` files on the
# FlowLog backend via `egglog::EGraph::with_backend(..)`.
egglog = { path = "../../egglog", default-features = false }
egglog-experimental = { path = "..", default-features = false }
libtest-mimic = "0.8"
